# src/controllers/auth.controller.ts
@@ -22,12 +22,39 @@ const registerValidateSchema = Yup.object({
     fullName: Yup.string().required(),
     username: Yup.string().required(),
     email: Yup.string().email().required(),
-    password: Yup.string().required(),
+    password: Yup.string()
+        .required()
+        .min(6, "Password must be at least 6 characters")
+        .test(
+            'at-least-one-uppercase-letter', 
+            "Contains at least one uppercase letter", 
+            (value) => {
+                if (!value) return false;
+                const regex = /^(?=.*[A-Z])/;
+                return regex.test(value);
+            }
+    )
+        .test(
+            'at-least-one-number', 
+            "Contains at least one number", 
+            (value) => {
+                if (!value) return false;
+                const regex = /^(?=.*\d)/;
+                return regex.test(value);
+            }
+    ),
     confirmPassword: Yup.string().required().oneOf([Yup.ref("password"), ""], "Password not match"),   
 })
 
 export default {
     async register(req: Request, res: Response) {
+        /**
+         #swagger.tags = ['Auth']
+         #swagger.requestBody = {
+            required: true,
+            schema: {$ref: "#/components/schemas/RegisterRequest"}
+         }
+         */
         const {
             fullName,
             username,
@@ -67,6 +94,7 @@ export default {
     },
     async login(req: Request, res: Response) {
         /**
+         #swagger.tags = ['Auth']
          #swagger.requestBody = {
             required: true,
             schema: {$ref: "#/components/schemas/LoginRequest"}
@@ -84,6 +112,7 @@ export default {
                         username: identifier,
                     },
                 ],
+                isActive: true,
             });
 
             if (!userByIdentifier) {
@@ -119,9 +148,9 @@ export default {
             });
         }
     },
-
     async me(req: IReqUser, res: Response) {
         /**
+         #swagger.tags = ['Auth']
          #swagger.security = [{
             "bearerAuth": []
          }]
@@ -134,6 +163,40 @@ export default {
                 message: "Success get user profile",
                 data: result,
             });
+        } catch (error) {
+            const err = error as unknown as Error;
+            res.status(400).json({
+                message: err.message,
+                data: null,
+            });
+        }
+    },
+    async activation(req: Request, res: Response) {
+        /**
+         #swagger.tags = ['Auth']
+         #swagger.requestBody = {
+            required: true,
+            schema: {$ref: '#components/schemas/ActivationRequest'}
+         }
+         */
+        try {
+            const { code } = req.body as {code: string};
+
+            const user = await UserModel.findOneAndUpdate(
+                {
+                    activationCode: code,
+                },
+                {
+                    isActive: true,
+                },
+                {
+                    new: true,
+                }
+        );
+        res.status(200).json({
+            message: "user successfully activated",
+            data: user,
+        });
         } catch (error) {
             const err = error as unknown as Error;
             res.status(400).json({
